# DevHands

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  init_devagentic_structure.py  pyproject.toml
DevHands/: main.py
DevHands/cli/: menu.py
DevHands/config/: settings.py
DevHands/core/: app_analyzer.py  app_controller.py  constants.py  new_app_builder.py
DevHands/domain/interfaces/: app_action_interface.py
DevHands/infrastructure/docker/: builder.py
DevHands/infrastructure/tools/: diff_generator.py  langchain_agent.py
tests/cli/: test_menu.py
tests/core/: test_app_analyzer.py  test_new_app_builder.py
